fix: Adjust padding for main content in layout for improved spacing

--- a/src/src/app/globals.css
+++ b/src/src/app/globals.css
@@ -15,22 +15,3 @@ body {
 .heading-font {
   font-family: var(--font-manrope);
 }
-
-/* 
- * This CSS rule is required to override the default styling of the HeroUI 
- * in the navigation bar. It ensures that custom styles are applied to 
- * achieve the desired appearance and functionality for the navigation bar.
- */
-header {
-  @screen md {
-    padding-left: 0rem !important;
-    padding-right: 0rem !important;
-  }
-
-  /**
-  * This ensures the element is aligned with the `px-4` class on smaller screens,
-  * maintaining consistent padding and layout alignment across breakpoints.
-  */
-  /* padding-left: 1rem !important;
-  padding-right: 1rem !important; */
-}
